@@ -1908,6 +1908,7 @@ gtk_label_set_pattern
 gtk_label_set_justify
 gtk_label_set_ellipsize
 gtk_label_set_width_chars
+gtk_label_set_max_width_chars
 gtk_label_get
 gtk_label_parse_uline
 gtk_label_set_line_wrap
@@ -1925,6 +1926,7 @@ gtk_label_get_attributes
 gtk_label_get_justify
 gtk_label_get_ellipsize
 gtk_label_get_width_chars
+gtk_label_get_max_width_chars
 gtk_label_get_label
 gtk_label_get_layout
 gtk_label_get_line_wrap
