@@ -1307,6 +1307,7 @@ gtk_label_get_label
 gtk_label_get_layout
 gtk_label_get_layout_offsets
 gtk_label_get_line_wrap
+gtk_label_get_max_width_chars
 gtk_label_get_mnemonic_keyval
 gtk_label_get_mnemonic_widget
 gtk_label_get_selectable
@@ -1329,6 +1330,7 @@ gtk_label_set_label
 gtk_label_set_line_wrap
 gtk_label_set_markup
 gtk_label_set_markup_with_mnemonic
+gtk_label_set_max_width_chars
 gtk_label_set_mnemonic_widget
 gtk_label_set_pattern
 gtk_label_set_selectable
